# cli

./: .editorconfig  .editorconfig-checker.json  .env  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs  install.ps1  install.sh  prek.toml  renovate.json  test_list_output.sh
.cargo/: config.toml
.crow/: binaries-mac.yaml  binaries.yaml  changelog.yaml  foo.yaml  lint.yaml  release-notes.yaml  release.yaml  test.yaml
.github/workflows/: build-macos.yaml
.gitsv/: config.yaml
docs/: cli-commands.md
docs-generator/: Cargo.toml
docs-generator/src/: main.rs
src/: client.rs  config.rs  crypto.rs  env_vars.rs  lib.rs  main.rs  update.rs  utils.rs
src/app/: instances.rs
src/commands/: auth.rs  auth_leptos.rs  auth_ui.rs  config.rs  db.rs  delete.rs  deploy.rs  init.rs  invoke.rs  list.rs  mod.rs  schedule.rs  server.rs  servers.rs  settings.rs  status.rs  stop.rs  update.rs
src/commands/auth/: auth_ui.rs  auth_unit_test.rs  login.rs  mod.rs
src/commands/item/: toml.rs
src/item/: deployment.rs  invoke.rs  mod.rs  schedule.rs  settings.rs  toml.rs
tests/: auth_integration.rs  content_toml.rs  delete_test.rs  deploy_test.rs  deployment_test.rs  instances_test.rs  invoke_test.rs  list_test.rs  public_key_test.rs  schedule_test.rs  server_test.rs  servers_test.rs  settings_test.rs
