[package]
name = "ricochet-cli"
version = "0.1.0"
edition = "2024"
resolver = "3"
build = "build.rs"

[[bin]]
name = "ricochet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap-markdown = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
dirs = "6.0"
toml = "0.9"
dialoguer = "0.12"
indicatif = "0.18"
comfy-table = "7.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
colored = "3.0"
webbrowser = "1.0"
url = "2.5"
prefixed-api-key = "0.3"
ulid = "1.1"
flate2 = "1.0"
tar = "0.4"
axum = "0.8"
urlencoding = "2.1"
unicode-icons = "2.0"
html-escape = "0.2"

regex = "1.11.3"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.8"
tokio-test = "0.4"

# Testing profile: faster compilation for CI/testing (matches ricochet repo)
# Use with: cargo build --profile testing
[profile.testing]
inherits = "release"
opt-level = 2          # Some optimization, faster compile than release
lto = false            # No link-time optimization
strip = false          # Keep symbols for debugging
debug = 0              # Minimal debug info

# Release profile: full optimization for production builds (matches ricochet repo)
# Only used for tagged releases
[profile.release]
lto = true             # Full LTO for maximum optimization
codegen-units = 1      # Single unit for best optimization
strip = "symbols"      # Strip symbols for smaller binaries

# Optimize dependencies even in dev mode for better test performance
[profile.dev.package."*"]
opt-level = 3
debug = 2
