[package]
name = "ricochet-cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"
resolver = "3"

[[bin]]
name = "ricochet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std"
] }
clap = { version = "4.5", features = ["derive", "env"] }
clap-markdown = "0.1"
colored = "3.0"
comfy-table = "7.1"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
dirs = "6.0"
flate2 = "1.0"
html-escape = "0.2"
indicatif = "0.18"
prefixed-api-key = "0.3"
regex = "1.11.3"
reqwest = { version = "0.12", default-features = false, features = [
  "cookies",
  "json",
  "multipart",
  "rustls-tls",
  "stream"
] }
ricochet-core = { git = "https://github.com/ricochet-rs/ricochet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
ulid = "1.1"
unicode-icons = "2.0"
url = "2.5"
urlencoding = "2.1"
walkdir = "2.5"
webbrowser = "1.0"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.8"
tokio-test = "0.4"

# Optimize dependencies even in dev mode for better test performance
[profile.dev.package."*"]
opt-level = 3
debug = 2

# Release profile: full optimization for production builds (matches ricochet repo)
# Only used for tagged releases
[profile.release]
strip = "symbols"  # Strip symbols for smaller binaries
lto = true  # Full LTO for maximum optimization
codegen-units = 1  # Single unit for best optimization

# Testing profile: faster compilation for CI/testing (matches ricochet repo)
# Use with: cargo build --profile testing
[profile.testing]
inherits = "release"
opt-level = 2  # Some optimization, faster compile than release
debug = 0  # Minimal debug info
strip = false  # Keep symbols for debugging
lto = false  # No link-time optimization
